# vision2020

./: CMakeLists.txt
scripts/: 20-video0.rules  vision2020.service
src/main/: CMakeLists.txt  main.cpp  start.sh  startCam.sh
src/tools/cameraTunning/: CMakeLists.txt  cameraTunning.cpp  startCam.sh
src/tools/cameraTunning.cpp/: cameraTunning.cpp
src/tools/visualTesting/: CMakeLists.txt  startCam.sh  visualTesting.cpp
